--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8000:80"
     volumes:
       - ../backend:/var/www/html
+      - ./apache-laravel.conf:/etc/apache2/sites-available/000-default.conf
     depends_on:
       - mysql
 
