--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,31 @@
 FROM php:8.2-apache
 
-   # Install MySQL extension
-   RUN docker-php-ext-install pdo pdo_mysql
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    zip \
+    unzip \
+    libpng-dev \
+    libonig-dev \
+    libxml2-dev \
+    gnupg
 
-   # Enable Apache rewrite module (for Laravel)
-   RUN a2enmod rewrite
+# Install Node.js and npm
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y nodejs
+
+# Install MySQL extension
+RUN docker-php-ext-install pdo pdo_mysql
+
+# Enable Apache rewrite module
+RUN a2enmod rewrite
+
+# Install Puppeteer globally
+RUN npm install -g puppeteer
+
+# Install Chromium dependencies
+RUN apt-get install -y \
+    chromium \
+    libgbm1 \
+    libasound2
