--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,5 +27,15 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  # Redis Cache Service
+  redis:
+    image: redis:7-alpine
+    container_name: price_tracker_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
 volumes:
   mysql_data:
+  redis_data:
